tests/errors/first_stage/.entry/invalid_lbl_name/invalid_lbl_name.as
; the .entry argument is not a valid name for a label
.entry ent_lbl